# pdep

./: .gitignore  exp.py  pyproject.toml
jsons/: vpc_desc.json
pdep/: __init__.py  examples.py  inter.py  plan.py  utils.py
pdep/aws/: aws_info.py  ecs.py  elb.py  eventbridge.py  network.py
pdep/aws/backbones/app/: interfaces.py  simpleappbb.py
pdep/aws/backbones/net/: interfaces.py  simple.py  simplenetbb.py
plans/plan1/: app.py  net.py  plan1.py  state.json
