[tool.poetry]
name = "pdep"
version = "0.1.0"
description = ""
authors = ["Amir Hadar <ahadar@aligntech.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dataclasses-json = "^0.5.7"
pydantic = "^1.10.2"
jsonpickle = "^2.2.0"
awscli-local = "^0.20"
logdecorator = "^2.4"
ipcalc = "^1.99.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
